# starlette-gcp-logging

./: pyproject.toml
.github/workflows/: quality.yml  release.yml
starlette_gcp_logging/: formatter.py  middleware.py
test/: test_gcp_logging.py
