[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["starlette_gcp_logging/*"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.metadata.hooks.vcs.urls]
source_archive = "https://github.com/DelfinaCare/starlette-gcp-logging/archive/{commit_hash}.zip"

[project]
name = "starlette-gcp-logging"
dynamic = ["version"]
authors = [
  { name="delfina", email="open-source@delfina.com" },
]
description = "Structured JSON logging for Starlette on Google Cloud Run"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "starlette >= 0.40.0",
]


[project.optional-dependencies]
dev = [
  "mypy >= 1.11.2",
  "pytest >= 8.4.1",
  "httpx >= 0.27.0",
  "ruff >= 0.9.0",
]

[project.urls]
Homepage = "https://github.com/DelfinaCare/starlette-gcp-logging"
Issues = "https://github.com/DelfinaCare/starlette-gcp-logging/issues"
Repository = "https://github.com/DelfinaCare/starlette-gcp-logging.git"

[tool.ruff.lint]
extend-select = ["I"]
